# chatkit-js

./: .env.example  .gitignore  AGENTS.md  OPENAI_SPEC.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: blue-bugs-clap.md  clean-yaks-push.md  dirty-apes-flow.md  fair-toys-kiss.md  loud-donuts-sniff.md  purple-worms-care.md  seven-toys-vanish.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yaml
.github/workflows/: release.yml
docs/: index.md  introduction.md  release.md
docs/concepts/: actions.md  threads.md  tools.md
docs/guides/: framework-agnostic-integration.md  update-client-during-response.md
docs/images/: .gitkeep
examples/excel-echarts-chatkit/: package.json
examples/excel-echarts-chatkit/backend/: .env.example  pyproject.toml
examples/excel-echarts-chatkit/backend/app/: __init__.py  main.py
examples/excel-echarts-chatkit/backend/excel_echarts_chatkit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/excel-echarts-chatkit/backend/scripts/: run.sh
examples/excel-echarts-chatkit/frontend/: .env.example  CHANGELOG.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
examples/managed-chatkit/: MIGRATION.md  README.md  package-lock.json  package.json
examples/managed-chatkit-angular/: README.md  package.json
examples/managed-chatkit/backend/: .env.example  .gitignore  pyproject.toml
examples/managed-chatkit/backend/app/: __init__.py  main.py
examples/managed-chatkit/backend/scripts/: run.sh
(+34 files in other folders)
