[project]
name = "managed-chatkit-backend"
version = "0.1.0"
description = "FastAPI backend for creating ChatKit workflow sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114,<0.116",
    "httpx>=0.27,<0.28",
    "uvicorn[standard]>=0.36,<0.37",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4,<0.7",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
